--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,29 +1,41 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro'
+import { getPosts } from '../utils/posts'
+
+const posts = await getPosts()
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">taverasmisael</span></h1>
-	</main>
+<Layout title="Misael Taveras web">
+  <main>
+    <h1>Welcome to taverasmisael <span class="text-gradient">v2</span></h1>
+    {
+      posts.map((p) => (
+        <div>
+          <h2>
+            <a href={`blog/${p.slug}`}>{p.title}</a>
+          </h2>
+        </div>
+      ))
+    }
+  </main>
 </Layout>
 
 <style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
+  main {
+    margin: auto;
+    padding: 1.5rem;
+    max-width: 60ch;
+  }
+  h1 {
+    font-size: 3rem;
+    font-weight: 800;
+    margin: 0;
+  }
+  .text-gradient {
+    background-image: var(--accent-gradient);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 400%;
+    background-position: 0%;
+  }
 </style>
