--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,10 +1,22 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "@/layouts/Layout.astro";
+import { getPosts } from "@/utils/posts";
+
+const posts = getPosts();
 ---
 
 <Layout title="Misael Taveras web">
   <main>
     <h1>Welcome to taverasmisael <span class="text-gradient">v2</span></h1>
+    {
+      posts.map(p => (
+        <div>
+          <h2>
+            <a href={p.slug}>{p.title}</a>
+          </h2>
+        </div>
+      ))
+    }
   </main>
 </Layout>
 
