--- a/src/pages/[lang]/blog/[...slug].astro
+++ b/src/pages/[lang]/blog/[...slug].astro
@@ -31,7 +31,7 @@ const components = {
 
 <Layout lang={Astro.params.lang} description={meta.description} title={entry.data.title}>
   <main
-    class="prose prose-blue dark:prose-invert lg:prose-lg prose-img:mx-auto prose-img:rounded-sm prose-img:shadow-sm mx-auto px-4"
+    class="prose prose-slate dark:prose-invert lg:prose-lg 2xl:prose-xl prose-img:mx-auto prose-img:rounded-sm prose-img:shadow-sm mx-auto px-4"
   >
     <article>
       <Image
