--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,1 +1,68 @@
-<footer>Adios</footer>
+---
+const year = new Date().getFullYear();
+
+const pages = [
+  {
+    href: "Archivo",
+    text: "Archivo",
+  },
+  {
+    href: "/privacidad",
+    text: "Privacidad",
+  },
+  {
+    href: "/terminos",
+    text: "Condiciones",
+  }
+];
+
+const social = [
+  {
+    href: "https://twitter.com/taverasmisael",
+    text: "Twitter",
+  },
+  {
+    href: "https://www.linkedin.com/in/taverasmisael/",
+    text: "LinkedIn",
+  },
+  {
+    href: "https://github.com/taverasmisael",
+    text: "GitHub",
+  },
+  {
+    href: "https://open.spotify.com/show/18Ty4rvMQVW7btwcXvo8Uq",
+    text: "Podcast",
+  },
+];
+---
+
+<footer
+  class="mx-auto mt-8 max-w-7xl border-t border-slate-200/50 p-2 text-center text-xs dark:border-slate-800/50 sm:text-left md:p-8"
+>
+  <div class="mb-4 sm:flex sm:justify-between">
+    <h6 class="hidden sm:block">
+      Todos los derechos reservados ©️{year} - <strong class="font-semibold">Misael Taveras</strong>
+    </h6>
+    <ul class="divide-blue-100 text-sm sm:divide-x sm:text-xs">
+      {
+        social.map(link => (
+          <a href={link.href} class="px-2" target="_blank">
+            {link.text}
+          </a>
+        ))
+      }
+    </ul>
+  </div>
+  <div class="divide-x divide-blue-100 text-slate-700 dark:text-slate-300 sm:pb-0 sm:pt-2">
+    {
+      pages.map(link => (
+        <a href={link.href} class="px-1 underline">
+          {link.text}
+        </a>
+      ))
+    }
+  </div>
+  <h6 class="mt-2 block pb-2 sm:hidden">
+    ©️{year} - <strong class="font-semibold">Misael Taveras</strong>
+  </h6>
+</footer>
