--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -10,7 +10,7 @@ const basePath = Astro.url.pathname.split("/")[2]; // 0 is empty, 1 is lang, 2 i
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
         <button
           type="button"
-          class="inline-flex items-center justify-center rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-inset dark:text-gray-200 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-white"
+          class="inline-flex items-center justify-center rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-inset dark:hover:bg-gray-700 dark:focus:ring-white"
           aria-controls="mobile-menu"
           aria-expanded="false"
         >
@@ -40,7 +40,7 @@ const basePath = Astro.url.pathname.split("/")[2]; // 0 is empty, 1 is lang, 2 i
       </div>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2">
         <button
-          class="rounded-full p-2 hover:bg-blue-100/40 dark:text-gray-200 dark:hover:bg-gray-700/40 dark:hover:text-white"
+          class="rounded-full p-2 hover:bg-blue-100/40 dark:hover:bg-gray-700/40 dark:hover:text-white"
         >
           <span class="sr-only">Search</span>
           <svg
