TIL is bad for A11Y to use headings for copy and things

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -62,7 +62,7 @@ const social = [
       ))
     }
   </div>
-  <h6 class="mt-2 block pb-2 sm:hidden">
+  <p class="mt-2 block pb-2 sm:hidden">
     ©️{year} - <strong class="font-semibold">Misael Taveras</strong>
-  </h6>
+  </p>
 </footer>
