--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,4 +1,6 @@
 ---
+import { Image } from "astro:assets";
+import logo from "@/assets/brand/logo-REPLACE.svg";
 import Nav from "./Nav.astro";
 
 const basePath = Astro.url.pathname.split("/")[2]; // 0 is empty, 1 is lang, 2 is the page
@@ -23,16 +25,17 @@ const basePath = Astro.url.pathname.split("/")[2]; // 0 is empty, 1 is lang, 2 i
       </div>
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex shrink-0 items-center">
-          <img
-            class="block h-8 w-auto lg:hidden"
-            src="https://tailwindui.com/img/logos/mark.svg?color=blue&shade=400"
-            alt="Your Company"
-          />
-          <img
-            class="hidden h-8 w-auto lg:block"
-            src="https://tailwindui.com/img/logos/mark.svg?color=blue&shade=400"
-            alt="Your Company"
-          />
+          <a href="/">
+            <span class="sr-only">Misael Taveras</span>
+            <Image
+              class="block h-8 w-auto"
+              alt="Misael Taveras Logo"
+              aria-hidden={true}
+              src={logo.src}
+              width={logo.width}
+              height={logo.height}
+            />
+          </a>
         </div>
         <div class="hidden sm:ml-6 sm:block">
           <Nav activePage={basePath} />
