--- a/src/components/layout/Nav.astro
+++ b/src/components/layout/Nav.astro
@@ -1,12 +1,13 @@
 ---
 import NavLink from "./NavLink.astro";
+import { fullLocalizedPath } from "@/utils/i18n";
 
 interface Props {
   activePage: string;
   isMobile: boolean;
 }
 
-const pages = [
+const basePages = [
   {
     name: "Blog",
     path: "blog",
@@ -30,6 +31,9 @@ const pages = [
 ] as const;
 
 const { isMobile, activePage } = Astro.props;
+const [, lang] = Astro.url.pathname.split("/");
+const pages = basePages.map(page => ({ ...page, href: fullLocalizedPath(lang, page.href) }));
+console.log({ pages });
 ---
 
 <nav role="navigation" class="flex items-center justify-between gap-1 sm:gap-4" class:list={{ "p-2 pb-3": isMobile }}>
