--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,4 +1,10 @@
 ---
+import type JSX from "solid-js";
+import TwitterLogo from "@/components/logos/Twitter.astro";
+import GitHubLogo from "@/components/logos/GitHub.astro";
+import LinkedInLogo from "@/components/logos/LinkedIn.astro";
+import PodcastLogo from "@/components/logos/Podcast.astro";
+
 import { getFullLocalizedPath } from "@/utils/i18n";
 const year = new Date().getFullYear();
 
@@ -21,23 +27,27 @@ const social = [
   {
     href: "https://twitter.com/taverasmisael",
     text: "Twitter",
+    icon: TwitterLogo as unknown as () => JSX.Element,
   },
   {
     href: "https://www.linkedin.com/in/taverasmisael/",
     text: "LinkedIn",
+    icon: LinkedInLogo as unknown as () => JSX.Element,
   },
   {
     href: "https://github.com/taverasmisael",
     text: "GitHub",
+    icon: GitHubLogo as unknown as () => JSX.Element,
   },
   {
     href: "https://open.spotify.com/show/18Ty4rvMQVW7btwcXvo8Uq",
     text: "Podcast",
+    icon: PodcastLogo as unknown as () => JSX.Element,
   },
 ];
 
 const [, locale] = Astro.url.pathname.split("/");
-const localizePath = getFullLocalizedPath(locale)
+const localizePath = getFullLocalizedPath(locale);
 const pages = basePages.map(page => ({
   ...page,
   href: localizePath(page.href),
@@ -45,32 +55,39 @@ const pages = basePages.map(page => ({
 ---
 
 <footer
-  class="mx-auto mt-8 max-w-7xl border-t border-slate-200/50 p-2 text-center text-xs dark:border-slate-800/50 sm:text-left md:p-8"
+  class="mx-auto mt-8 max-w-7xl border-t border-slate-200/50 px-2 py-6 text-center text-xs dark:border-slate-800/50 sm:px-6 sm:text-left"
 >
-  <div class="mb-4 sm:flex sm:justify-between">
+  <div class="sm:flex sm:items-center sm:justify-between">
     <h6 class="hidden sm:block">
       Todos los derechos reservados ©️{year} - <strong class="font-semibold">Misael Taveras</strong>
     </h6>
-    <ul class="divide-blue-100 text-sm sm:divide-x sm:text-xs">
+    <ul class="flex items-center justify-center gap-4">
       {
         social.map(link => (
-          <a href={link.href} class="px-2" target="_blank">
+          <a href={link.href} class="p-2 hover:text-slate-700 dark:hover:text-white" target="_blank">
+            <link.icon class="w-6 sm:w-5" />
+          </a>
+        ))
+      }
+    </ul>
+  </div>
+  <div class="my-3 mt-8 text-slate-700 dark:text-slate-300 sm:mt-3">
+    <ul class="space-x-4 text-sm sm:text-xs">
+      {
+        pages.map((link, i) => (
+          <a
+            href={link.href}
+            class="dark:hover-text-slate-100 p-2 hover:text-slate-50"
+            class:list={{ "sm:pl-0": i === 0 }}
+            target="_blank"
+          >
             {link.text}
           </a>
         ))
       }
     </ul>
   </div>
-  <div class="divide-x divide-blue-100 text-slate-700 dark:text-slate-300 sm:pb-0 sm:pt-2">
-    {
-      pages.map(link => (
-        <a href={link.href} class="px-1 underline">
-          {link.text}
-        </a>
-      ))
-    }
-  </div>
-  <p class="mt-2 block pb-2 sm:hidden">
-    ©️{year} - <strong class="font-semibold">Misael Taveras</strong>
+  <p class="block pb-2 text-slate-700 dark:text-slate-300 sm:hidden">
+    <strong class="font-semibold">Misael Taveras</strong> ©️{year}
   </p>
 </footer>
