Squashing "Blog and 404" pages into master.
Squash details:

commit 12f1eca2e11396905aaf004ed096fda2ad3a1012
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Mon Apr 24 19:08:07 2023 -0400

    make one of the blured backgrounds of the FeaturePost less round to add variety

commit 08df353da7493a7170bbe39e54309e21a0320cfa
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Mon Apr 24 19:07:47 2023 -0400

    create fun PageBanner component (MouseHerramientaMisteriosa)

commit f4d35028a0e63493a05c4a4d85693f077dbf3178
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Mon Apr 24 18:21:50 2023 -0400

    remove "pages" from footer. We won't use those, at least for now

commit 637de83a2c3f7295f6c2bba4578cf80d851e33bb
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Mon Apr 24 18:20:23 2023 -0400

    fix typo on footer classes (darkmode)

commit 0ae6262a90a44d4f2e6f516b1a822da73d0bed9d
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 19:10:02 2023 -0400

    make FeaturPost glow smaller

commit db0cce2ba1d74ba6aeac4227171d966e18bdc6a8
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 18:48:38 2023 -0400

    move wiggle animation to tailwind config

commit d146498abfc4105be11719e25ecbcb69d1da5a55
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 18:06:55 2023 -0400

    add a nicer feature post style

commit c727d00b19314596a1c8e9b1e270d7d549169f56
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 15:53:56 2023 -0400

    improve cards and blog list page. add dark-mode support

commit 0a4f53890db572fef7c28450a6a20f78c3a4b6db
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 15:36:09 2023 -0400

    Add regular card component for blog posts

commit 53ee1a9d81d4f382321acb81efde6bd23a944bde
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 09:57:10 2023 -0400

    create base layout with more focus on FeaturPost component

commit 97560cd6d5

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,61 +1,39 @@
 ---
-import type JSX from "solid-js";
 import TwitterLogo from "@/components/logos/Twitter.astro";
 import GitHubLogo from "@/components/logos/GitHub.astro";
 import LinkedInLogo from "@/components/logos/LinkedIn.astro";
 import PodcastLogo from "@/components/logos/Podcast.astro";
 
-import { getFullLocalizedPath } from "@/utils/i18n";
 const year = new Date().getFullYear();
 
-const basePages = [
-  {
-    href: "/archivo",
-    text: "Archivo",
-  },
-  {
-    href: "/privacidad",
-    text: "Privacidad",
-  },
-  {
-    href: "/terminos",
-    text: "Condiciones",
-  },
-];
-
+/* eslint-disable @typescript-eslint/no-unsafe-assignment */
 const social = [
   {
     href: "https://twitter.com/taverasmisael",
     text: "Twitter",
-    icon: TwitterLogo as unknown as () => JSX.Element,
+    icon: TwitterLogo,
   },
   {
     href: "https://www.linkedin.com/in/taverasmisael/",
     text: "LinkedIn",
-    icon: LinkedInLogo as unknown as () => JSX.Element,
+    icon: LinkedInLogo,
   },
   {
     href: "https://github.com/taverasmisael",
     text: "GitHub",
-    icon: GitHubLogo as unknown as () => JSX.Element,
+    icon: GitHubLogo,
   },
   {
     href: "https://open.spotify.com/show/18Ty4rvMQVW7btwcXvo8Uq",
     text: "Podcast",
-    icon: PodcastLogo as unknown as () => JSX.Element,
+    icon: PodcastLogo,
   },
 ];
-
-const [, locale] = Astro.url.pathname.split("/");
-const localizePath = getFullLocalizedPath(locale);
-const pages = basePages.map(page => ({
-  ...page,
-  href: localizePath(page.href),
-}));
+/* eslint-enable @typescript-eslint/no-unsafe-assignment */
 ---
 
 <footer
-  class="mx-auto mt-8 max-w-7xl border-t border-slate-200/50 px-2 py-6 text-center text-xs dark:border-slate-800/50 sm:px-6 sm:text-left"
+  class="mx-auto mt-8 w-full max-w-7xl border-t border-slate-200/50 px-2 py-6 text-center text-xs dark:border-slate-800/50 sm:px-6 sm:text-left"
 >
   <div class="sm:flex sm:items-center sm:justify-between">
     <h6 class="hidden sm:block">
@@ -64,24 +42,8 @@ const pages = basePages.map(page => ({
     <ul class="flex items-center justify-center gap-4">
       {
         social.map(link => (
-          <a href={link.href} class="p-2 hover:text-slate-700 dark:hover:text-white" target="_blank">
+          <a href={link.href} target="_blank" class="p-2 hover:text-slate-800 dark:hover:text-blue-50" target="_blank">
             <link.icon class="w-6 sm:w-5" />
-          </a>
-        ))
-      }
-    </ul>
-  </div>
-  <div class="my-3 mt-8 text-slate-700 dark:text-slate-300 sm:mt-3">
-    <ul class="space-x-4 text-sm sm:text-xs">
-      {
-        pages.map((link, i) => (
-          <a
-            href={link.href}
-            class="dark:hover-text-slate-100 p-2 hover:text-slate-50"
-            class:list={{ "sm:pl-0": i === 0 }}
-            target="_blank"
-          >
-            {link.text}
           </a>
         ))
       }
