--- a/src/components/layout/Nav.astro
+++ b/src/components/layout/Nav.astro
@@ -4,7 +4,7 @@ import { getFullLocalizedPath } from "@/utils/i18n";
 
 interface Props {
   activePage: string;
-  isMobile: boolean;
+  isMobile?: boolean;
 }
 
 const basePages = [
