--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 
 const Collections = {
-  blog: "posts",
+  blog: "blog",
 } as const;
 type CollectionKeys = keyof typeof Collections;
 
