--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Basic.astro";
 ---
 
-<Layout title="Misael Taveras web">
+<Layout description="HOME" title="Misael Taveras web">
   <main>
     <h1>Welcome to taverasmisael <span class="text-gradient">v2</span></h1>
   </main>
