--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,49 @@
 ---
-const search = new URLSearchParams(Astro.url.search)
+import Footer from "@/components/layout/Footer.astro";
+import MinimalHeader from "@/components/layout/MinimalHeader.astro";
+import { DEFAULT_LOCALE, getFullLocalizedPath } from "@/utils/i18n";
+
+export const prerender = true;
+
+const search = new URLSearchParams(Astro.url.search);
+const [, , localeFromPath] = Astro.url.pathname.split("/");
+const [localeFromSearch] = search.get("from")?.split("/") || [];
+
+// TODO: Check if the locales are valid
+const lang = localeFromPath || localeFromSearch || DEFAULT_LOCALE;
+const getLocalizedPath = getFullLocalizedPath(lang);
+const homeURL = getLocalizedPath("/");
+const luckyURL = getLocalizedPath("/random");
 ---
 
-<h1>{search.get('from')}</h1>
+<!DOCTYPE html>
+<html lang={lang} class="h-screen">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Página no encontrada — Misael Taveras</title>
+    <meta name="description" content="La página que buscabas no está disponible." />
+  </head>
+  <body class="flex h-full flex-col bg-slate-50 text-slate-900 dark:bg-gray-900 dark:text-slate-100">
+    <MinimalHeader />
+    <main class="grid flex-1 place-items-center px-6 py-24 sm:py-32 lg:px-8">
+      <div class="text-center">
+        <p class="text-xl text-slate-600 dark:text-slate-300 sm:text-4xl">404</p>
+        <h1 class="mb-10 text-4xl font-bold sm:mb-12 sm:text-6xl">La página que buscas no existe</h1>
+        <p class="mb-24 sm:mb-20">Es posible que la página se haya movido o solo exista en otro universo</p>
+        <div class="space-x-8">
+          <a
+            href={homeURL}
+            class="inline-block rounded-md bg-blue-50 px-6 py-3 font-semibold shadow-sm transition-colors hover:bg-blue-100/50 active:bg-blue-100 dark:bg-slate-800 dark:hover:bg-slate-800/90 dark:active:bg-slate-800/70"
+            >Ir al inicio</a
+          >
+
+          <a href={luckyURL} class="inline-block font-semibold text-blue-800 dark:text-blue-50">Me siento con suerte</a>
+        </div>
+      </div>
+    </main>
+    <Footer />
+  </body>
+</html>
