--- a/src/pages/[lang]/blog/[...slug].astro
+++ b/src/pages/[lang]/blog/[...slug].astro
@@ -1,14 +1,14 @@
 ---
-import { getEntryBySlug, CollectionEntry } from "astro:content";
-import { Image } from "astro:assets";
 import Admonition from "@/components/content/Admonition/Admonition.astro";
 import Layout from "@/layouts/Basic.astro";
+import { Image } from "astro:assets";
+import { getEntryBySlug, type CollectionEntry } from "astro:content";
 
 interface Props {
-  entry: CollectionEntry<"posts">;
+  entry: CollectionEntry<"blog">;
 }
 
-const entry = await getEntryBySlug("posts", Object.values(Astro.params).join("/"));
+const entry = await getEntryBySlug("blog", Object.values(Astro.params).join("/"));
 
 if (!entry) {
   return Astro.redirect(`/404?from=${Astro.url.pathname.substring(-1)}`);
