--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -32,5 +32,5 @@ if (!postFound.length) {
 
 const [lang, ...rest] = postFound[0].slug.split("/");
 
-return Astro.redirect(`/${lang}/${collection}/${rest.join('/')}`);
+return Astro.redirect(`/${lang}/${collection}/${rest.join("/")}`);
 ---
