--- a/src/components/PostTranslations.astro
+++ b/src/components/PostTranslations.astro
@@ -10,13 +10,13 @@ interface Props {
 
 const { translations, class: className } = Astro.props;
 
-const t = useTranslation(Astro.props.lang)
+const t = useTranslation(Astro.props.lang);
 ---
 
 <aside class="my-4 rounded-sm bg-blue-100 px-4 py-6 text-sm dark:bg-slate-700" class:list={className}>
   <div class="container mx-auto max-w-4xl">
     <p>
-      {t('ui', 'translation_available_in')}:
+      {t("ui", "translation_available_in")}:
       {
         translations.map((translation, idx) => (
           <Fragment>
@@ -26,7 +26,7 @@ const t = useTranslation(Astro.props.lang)
               lang={translation.lang}
               hreflang={translation.lang}
             >
-              {getLanguageName(translation.lang)} {translation.isOriginal ? "(Original)" : null}
+              {getLanguageName(translation.lang)} {translation.isOriginal ? `(${t("ui", "original")})` : null}
             </a>
             {idx < translations.length - 1 ? "|" : null}
           </Fragment>
