--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -1,19 +1,21 @@
 ---
-import Header from "@/components/layout/Header.astro";
-import Footer from "@/components/layout/Footer.astro";
 import { DEFAULT_LOCALE } from "@/utils/i18n";
-export interface Props {
-  title: string;
-  lang?: string;
-  description: string;
-  class?: string;
-}
+import type { DefaultLayoutProps } from "./types";
 
-const { title, class: className, description, lang = DEFAULT_LOCALE } = Astro.props;
+type Props = DefaultLayoutProps;
+
+const {
+  title,
+  description,
+  fullHeight,
+  lang = DEFAULT_LOCALE,
+  class: className,
+  ["class:list"]: classList,
+} = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang={lang}>
+<html lang={lang} class:list={{ "h-screen": fullHeight }}>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -21,12 +23,9 @@ const { title, class: className, description, lang = DEFAULT_LOCALE } = Astro.pr
     <meta name="generator" content={Astro.generator} />
     <title>{title} — Misael Taveras</title>
     <meta name="description" content={description} />
+    <slot name="head" />
   </head>
-  <body class="bg-slate-50 text-slate-900 dark:bg-gray-800 dark:text-slate-100" class:list={className}>
-    <Header />
-		<!-- This is a hack to prevent the header from overlapping the content -->
-		<div aria-hidden="true" class="h-20" />
+  <body class="bg-slate-50 text-slate-900 dark:bg-gray-800 dark:text-slate-100" class:list={[className, classList]}>
     <slot />
-    <Footer />
   </body>
 </html>
